[package]
name = "hotaru_rt_tokio"
version = "0.8.3"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"]
description = "Tokio runtime backend for Hotaru"
license = "MIT"
repository = "https://github.com/Field-of-Dreams-Studio/hotaru"
homepage = "https://hotaru.rs"

[dependencies]
hotaru_core = { path = "../hotaru_core", version = "=0.8.3", default-features = false }
tokio = { version = "1.28", features = ["full"] }

[features]
default = ["std"]
std = ["hotaru_core/std", "hotaru_core/spawn_send"]
