[package]
name = "hotaru_style_guide"
version = "0.1.0"
edition = "2021"

[dependencies]
ctor = "0.4"
hotaru = { path = "../hotaru" }
hotaru_core = { path = "../hotaru_core" }
htmstd = { path = "../htmstd" }
h2per = { path = "../h2per" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "style_guide"
path = "src/main.rs"

[[bin]]
name = "style_guide_simple"
path = "src/main_simple.rs"