[package]
name = "hotaru_style_guide"
version = "0.1.0"
edition = "2021"

[dependencies]
ctor = "0.4"
hotaru = { path = "../hotaru", version = "=0.8.4" }
hotaru_core = { path = "../hotaru_core", version = "=0.8.4" }
htmstd = { path = "../htmstd", version = "=0.8.3" }
h2per = { path = "../h2per", version = "=0.7.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "style_guide"
path = "src/main.rs"

[[bin]]
name = "style_guide_simple"
path = "src/main_simple.rs"