[package]
name = "hotaru_tls"
version = "0.8.2"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"]
description = "TLS transport for the Hotaru framework"
license = "MIT"
repository = "https://github.com/Field-of-Dreams-Studio/hotaru"
homepage = "https://hotaru.rs"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["hotaru", "tls"]

[dependencies]
hotaru_core = { version = "=0.8.3", path = "../hotaru_core" }
hotaru_io_tokio = { version = "=0.8.3", path = "../hotaru_io_tokio" }
tokio = { version = "1.28", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"
webpki-roots = "1"

[features]
default = []

tokio = ["hotaru_core/std", "hotaru_core/spawn_send", "hotaru_io_tokio/std"]
std = ["hotaru_core/std"]
embedded = ["hotaru_core/embedded"]
io_futures = []
io_tokio = ["hotaru_io_tokio/std"]
io_embedded = []
spawn_send = ["hotaru_core/spawn_send"]
spawn_local = ["hotaru_core/spawn_local"]

[dev-dependencies]
rcgen = "0.13"
