[package]
name = "hotaru_trans"
version = "0.8.0"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"]
description = "Procedural macros for Hotaru framework"
license = "GPL-3.0"
repository = "https://github.com/Field-of-Dreams-Studio/hotaru"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["hotaru", "macros"]

[dependencies]
hotaru_lib = { path = "../hotaru_lib", version = "0.7.3" } 
hotaru_core = { path = "../hotaru_core", version = "0.8.0" } 
cfg-if = "1.0" 
ctor = { version = "0.4.0", optional = true }

[dev-dependencies]
proc-macro2 = "1"

[features]
default = ["semi-trans"] 
external-ctor = ["ctor"] 
trans = [] 
semi-trans = [] 
attr = [] 

[lib]
proc-macro = true
