[package]
name = "hotaru_trans"
version = "0.8.4"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"]
description = "Procedural macros for Hotaru framework"
license = "MIT"
repository = "https://github.com/Field-of-Dream-Studio/hotaru"
homepage = "https://hotaru.rs"
categories = ["development-tools::procedural-macro-helpers", "web-programming"]
keywords = ["hotaru", "macros", "proc-macro", "web-framework", "dsl"]

[dependencies]
hotaru_core = { path = "../hotaru_core", version = "=0.8.4" }
cfg-if = "1.0" 
ctor = { version = "0.4.0", optional = true }

[dev-dependencies]
proc-macro2 = "1"
hotaru_http = { path = "../hotaru_http", version = "=0.8.4" }

[features]
default = ["trans"]
external-ctor = ["ctor"] 
trans = [] 
semi-trans = [] 
attr = [] 
facade = [] 

[lib]
proc-macro = true
