[package]
name = "htmstd"
version = "0.7.0"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Standard Middleware Library for Starberry" 
license = "GPL-3.0" 
repository = "https://github.com/Field-of-Dreams-Studio/hotaru" 
categories = ["network-programming", "web-programming::http-server"] 
keywords = ["hotaru"]   

[dependencies]
hotaru_trans = { path = "../hotaru_trans", version="0.8.0"} 
hotaru_core = { path = "../hotaru_core", version="0.8.0"} 
hotaru_lib = { path = "../hotaru_lib", version="0.7.3", features = ["ende", "url_encoding"]} 
akari = "^0.2" 
dashmap = "6.1.0" 
tokio = { version = "1.28", features = ["full"] }  
lazy_static = "1.5.0" 
