[package]
name = "htmstd"
version = "0.8.3"
edition = "2024"
authors = ["Redstone <redstone@fds.moe>"] 
description = "Standard middleware library for the Hotaru web framework"
license = "MIT"
repository = "https://github.com/Field-of-Dreams-Studio/hotaru"
homepage = "https://hotaru.rs"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["hotaru", "middleware", "session", "cors", "cookies"]

[dependencies]
hotaru_core = { path = "../hotaru_core", version = "=0.8.4" }
hotaru_trans = { path = "../hotaru_trans", version = "=0.8.4", features = ["trans"], default-features = false }
hotaru_http = { path = "../hotaru_http", version = "=0.8.4" }
hotaru_lib = { path = "../hotaru_lib", version = "=0.8.3", features = ["ende", "url_encoding"] }
akari = "0.2.8"
dashmap = "6.1.0" 
tokio = { version = "1.28", features = ["full"] }  
lazy_static = "1.5.0" 
