[package]
name = "hyper_hotaru_example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Only import the main crates
hotaru = { path = "../hotaru" }
h2per = { path = "../h2per" }

# Required for endpoint macros
ctor = "0.4"

# Async runtime (still needed for #[tokio::main])
tokio = { version = "1.28", features = ["full"] }

# Utilities that aren't re-exported
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"