[package]
name = "tutorial_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
hotaru = { path = "../hotaru" }
hotaru_core = { path = "../hotaru_core" }
htmstd = { path = "../htmstd" }
tokio = { version = "1", features = ["full"] }
once_cell = "1.17"
ctor = "0.4.0"
async-trait = "0.1"
bytes = "1"

[[example]]
name = "ch1_basic_server"

[[example]]
name = "ch2_advanced_routing"

[[example]]
name = "ch3_middleware"

[[example]]
name = "ch4_multi_protocol"
